# opossom

./: LICENSE.txt  README.md  pyproject.toml
docs/: column-namespace.ipynb  explore.ipynb  expression-namespace.ipynb
experiment_01/: README.md  explore.ipynb  pyproject.toml
experiment_01/opossom/column/: __init__.py
experiment_01/opossum/column/: base.py  str.py
experiment_01/opossum/table/: __init__.py
experiment_02/: README.md
mini_experiments/: column-namespace.ipynb  expression-namespace.ipynb
opossom/column/: num.py
opossom/table/: table.py  verbs.py
